k8s/deployment.yml
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: home-store-pvc
# spec:
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
spec:
  selector:
    matchLabels:
      app: home
  replicas: 1
  template:
    metadata:
      labels:
        app: home
    spec:
      # volumes:
      # - name: home-store-volume
      #   persistentVolumeClaim:
      #     claimName: home-store-pvc
      containers:
      - name: home
        image: skinnyjames/home:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        # volumeMounts:
        # - name: home-store-volume
        #   mountPath: /app/store
